--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "/usr/local/bin/python",
+    "python.pythonPath": "/home/vscode/.local/share/virtualenvs/workspace-dqq3IVyd/bin/python",
     "python.venvPath": "/home/vscode/.local/share/virtualenvs",
+    "python.linting.pylintPath": "/home/vscode/.local/share/virtualenvs/workspace-dqq3IVyd/bin/pylint"
 }
